# OpenOS

./: .gitignore  BOOT_FIX_SUMMARY.md  FEATURES.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KEYBOARD_FIX.md  Makefile  README.md  grub.cfg  linker.ld
Kernel2.0/: Makefile  README.md  boot.S  kernel.c  keyboard.c  linker.ld  pmm.c  timer.c  vmm.c  vmm.h
arch/x86/: exceptions.c  pic.c  pic.h
benchmarks/: pipeline_vs_single  pipeline_vs_single.c
docs/: OS_EVOLUTION_STRATEGY.md  UPGRADE_PHASE0.md  VIRTUALBOX_TROUBLESHOOTING.md  debugging.md
drivers/: driver_config.h  timer.c
drivers/config/: Cargo.toml
drivers/config/src/: console_config.rs  keyboard_config.rs  lib.rs  timer_config.rs
fs/: vfs.c  vfs.h
include/: gui.h  ipc.h  network.h  script.h  smp.h
kernel/: commands.c  commands.h  gui.c  ipc.c  kernel.c  kernel.h  network.c  panic.c  script.c  smp.c  string.c  string.h
kernel/cpu/: performance.c  performance.h  pipeline.c  pipeline.h  single_cycle.c  single_cycle.h
memory/: bus.c  bus.h  cache.c  cache.h  slab.c
tools/: create-iso.sh  run-qemu.sh  run-virtualbox.sh
